Added execution environment where missing.